# fastapiclass

./: pyproject.toml  readme.md
fast_api_example/: main.py
