[tool.poetry]
name = "fast-api-example"
version = "0.1.0"
description = ""
authors = ["Olivier Neve"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "fast_api_example.main:start"
